Bug 148492 - EDITING: Ctrl+Cursor jumping slow in jumbo sheet with freezed columns
Summary: EDITING: Ctrl+Cursor jumping slow in jumbo sheet with freezed columns
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Calc-1048576plus-rows
  Show dependency treegraph
 
Reported: 2022-04-10 09:50 UTC by Roland Kurmann
Modified: 2022-04-17 09:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
jumbo_freezed_jump_end.ods (8.67 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-04-10 09:52 UTC, Roland Kurmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roland Kurmann 2022-04-10 09:50:03 UTC
Description:
Jumping back from the last row by ctrl-cursor up is slow in Calc jumbo sheets if there are freezed columns.

Steps to Reproduce:
0. Enable jumbo sheets in Calc
1. Open attached file jumbo_freezed_jump_end.ods (B2 is freezed -> column A and row 1 are freezed)
2. Jump to last row in column B by reapting ctrl-cursor down until the last row is reached
3. Jump up by ctrl-cursor up

Actual Results:
Slow response (delay of 7s on my machine) and high CPU

Expected Results:
Same behavior as without freezed column -> instant jump


Reproducible: Always


User Profile Reset: No



Additional Info:
If column freezing is removed, jumping up from last row is fast again.

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 33fe4909e29654faeef7f665f31ff31776ecfeec
CPU threads: 4; OS: Linux 5.3; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded Jumbo


I'm using Intel i7-4500U 1.8GHz CPU (Haswell).
Comment 1 Roland Kurmann 2022-04-10 09:52:21 UTC
Created attachment 179435 [details]
jumbo_freezed_jump_end.ods
Comment 2 Telesto 2022-04-11 09:08:21 UTC
There is an delay
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: efe854bf9b6daff3d0ecf6e3d04bd9a50bfaa3f3
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL Jumbo

1. open the attached file
2. Press CTRL+DOWN
3. Press CTRL+UP (lag)
Comment 3 Telesto 2022-04-11 09:10:29 UTC
Also in
Version: 7.1.0.0.beta1+ (x64)
Build ID: f9fab4203c1aa0b9a3f27ce2713b6d5addc7df19
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 4 Commit Notification 2022-04-12 15:08:19 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c358ed52ade8308bf504c61fda58a4733ba7b1df

compress row height calculation (tdf#148492)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Roland Kurmann 2022-04-17 08:52:00 UTC
I've tested it. The problem is fixed. Thanks!

As I am no member of the QA team I do not change the state of this issue.