compress row height calculation (tdf#148492)

Change-Id: I42346472485f00bd64d08d2e2d0aef0ec02423f1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132897
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>